- Fixed bug #51911 (ReflectionParameter::getDefaultValue() memory leaks with constant array)